# scode

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  action.sh  bin.mjs  codesign.sh  index.html  index.js  index.mjs  lib.mjs  package.json  postinstall.bash  schema.json
.cargo/: config.toml
.github/workflows/: artifacts.yml  make.yml  pages.yml  publish.yml  version.yml
artifacts/macos_arm/: scode
artifacts/macos_x86/: scode
artifacts/ubuntu_arm/: scode
artifacts/ubuntu_arm64/: scode
artifacts/ubuntu_x86/: scode
example/: .gitignore  build.bash  build.mjs  package.json  scodefig.jsonc  serve.mjs  types.d.ts
example/public/: 404.html  index.html  index.js  sound-manager.js  style.css
scripts/: postinstall.bash
src/: config.rs  info.rs  logging.rs  logging_old.rs  main.rs  main_old.rs  parser.rs  test.rs  wave.rs
