[package]
name = "ecas-encoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8.1"
regex = "1.10.3"
walkdir = "2.4.0"
sha1 = "0.10.6"
rayon-hash = "0.5.0"
byteorder = "1.5.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
bincode = "1.3.3"
termcolor = "1.4.1"
flate2 = "1.0.28"
humansize = "2.1.3"
bytes = "1.5.0"

lazy_static = "1.4.0"
